[package]
name = "rddown"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
dirs = "6.0.0"
regex = "1.12.2"
reqwest = { version="0.12.24", features = ["json", "gzip"] }
serde = { version="1.0.228", features = ["derive"] }
serde_json = { version="1.0.145" }
tokio = { version="1.48.0", features = ["rt-multi-thread", "macros", "time", "process", "fs"] }
toml = "0.9.8"
url = "2.5.7"
urlencoding = "2.1.3"
